--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.1.0-alpha07"
+        classpath 'com.android.tools.build:gradle:7.1.0-alpha08'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21'
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0' // NEW
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.5.0' // NEW
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
