--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,7 +3,19 @@ plugins {
     id 'kotlin-android'
 }
 
+def keystorePropertiesFile = file("C:\\Users\\Kochchy\\.gradle\\gradle.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     compileSdk 30
     buildToolsVersion "30.0.3"
 
@@ -21,7 +33,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -44,8 +56,8 @@ android {
 dependencies {
     implementation project(':library')
 
-   // implementation 'androidx.core:core-ktx:1.6.0'
-   // implementation 'androidx.appcompat:appcompat:1.3.1'
+    // implementation 'androidx.core:core-ktx:1.6.0'
+    // implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
