--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -54,8 +54,7 @@ android {
 }
 
 dependencies {
-    implementation project(':library')
-
+    implementation project(':subsampling-image-compose')
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
