--- a/subsampling_image_compose/build.gradle
+++ b/subsampling_image_compose/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     implementation("androidx.compose.ui:ui:$compose_version")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01")
     implementation("com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0")
-    implementation("io.coil-kt:coil-compose:1.3.2")
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 }
