--- a/subsampling_image_compose/build.gradle
+++ b/subsampling_image_compose/build.gradle
@@ -58,7 +58,7 @@ allprojects {
 
 dependencies {
     implementation("androidx.compose.ui:ui:$compose_version")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.1")
     implementation("com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0")
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 }
