--- a/rating_bar_compose/build.gradle
+++ b/rating_bar_compose/build.gradle
@@ -1,17 +1,18 @@
+import com.vanniktech.maven.publish.SonatypeHost
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'com.vanniktech.maven.publish'
-//    id 'maven'
 }
 
 android {
-    compileSdk 30
-    buildToolsVersion "30.0.3"
+    compileSdk 33
+    buildToolsVersion "33.0.0"
 
     defaultConfig {
         minSdk 21
-        targetSdk 30
+        targetSdk 33
 
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -30,7 +31,6 @@ android {
 
     kotlinOptions {
         jvmTarget = '11'
-        useIR = true
     }
 
     buildFeatures {
@@ -38,7 +38,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion compose_compiler_version
     }
 
     android.libraryVariants.all { variant ->
@@ -48,16 +48,26 @@ android {
     }
 }
 
+/*
 allprojects {
     plugins.withId("com.vanniktech.maven.publish") {
         mavenPublish {
             sonatypeHost = "S01"
         }
     }
+}*/
+
+
+mavenPublishing {
+    publishToMavenCentral(SonatypeHost.DEFAULT)
+    // or when publishing to https://s01.oss.sonatype.org
+    //publishToMavenCentral(SonatypeHost.S01)
+
+    signAllPublications()
 }
 
 dependencies {
-    implementation("androidx.compose.ui:ui:$compose_version")
+    implementation("androidx.compose.ui:ui:1.3.3")
     implementation("androidx.compose.foundation:foundation:$compose_version")
     implementation("androidx.compose.foundation:foundation-layout:$compose_version")
     implementation("androidx.compose.material:material-icons-extended:$compose_version")
